# gpu_skeleton_tracking

./: CMakeLists.txt  package.xml
cmake/modules/: FindGLIB.cmake  FindSkeltrack.cmake
include/: RGB_D_receiver.h  gpu-nsssp.h  seq_skel_track.h
include/skeltrack/: skeltrack-skeleton.h  skeltrack-util.h
launch/: sequential.launch
src/: RGB_D_receiver.cc  dijkstra-test.cu  gpu-nsssp.cu  gpu_skeleton_tracking.cu  seq_skel_track.cc  seq_skeleton_tracking.cc
src/skeltrack/: skeltrack-skeleton.c  skeltrack-skeleton.cc
